--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pixels = "0.0.2"
-winit = "0.19.5"
-serde = "1.0.103"
+glium = "0.25.1"
+#pixels = "0.0.2"
+#serde = "1.0.103"
 image = "0.22.3"
